--- a/canteens/bbc/index.html
+++ b/canteens/bbc/index.html
@@ -9,7 +9,7 @@
     <script src="../../scripts/theme.js?=040325"></script>
     <script src="../../common/categoryNavigator.js?v=040325"></script>
     <script src="../../common/menuRenderer.js?=040325"></script>
-    <script src="./DevidsMenu.js?v=040325"></script>
+    <script src="./BbcMenu.js?v=040325"></script>
 </head>
 <body>
     <div class="container">
