--- a/canteens/moc/index.html
+++ b/canteens/moc/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div id="feedback">
-            <a href="/stalls/feedback" class="feedback-btn">Feedback Form</a>
+            <a href="../../feedback" class="feedback-btn">Feedback Form</a>
         </div>
     </div>
 
