Move canteen pages to root/

--- a/moc/index.html
+++ b/moc/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ministry of Cheese</title>
-    <link rel="stylesheet" href="../../styles/theme.css?v=040325">
-    <link rel="stylesheet" href="../../styles/common.css?v=040325">
-    <script src="../../scripts/theme.js?=040325"></script>
-    <script src="../../common/categoryNavigator.js?v=040325"></script>
-    <script src="../../common/menuRenderer.js?=040325"></script>
+    <link rel="stylesheet" href="../styles/theme.css?v=040325">
+    <link rel="stylesheet" href="../styles/common.css?v=040325">
+    <script src="../scripts/theme.js?=040325"></script>
+    <script src="../common/categoryNavigator.js?v=040325"></script>
+    <script src="../common/menuRenderer.js?=040325"></script>
     <script src="./MocMenu.js?v=040325"></script>
 </head>
 <body>
@@ -39,7 +39,7 @@
         </div>
 
         <div id="feedback">
-            <a href="../../feedback" class="feedback-btn">Feedback Form</a>
+            <a href="../feedback" class="feedback-btn">Feedback Form</a>
         </div>
     </div>
 
