--- a/tc/index.html
+++ b/tc/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devid's Canteen</title>
-    <link rel="stylesheet" href="../../styles/theme.css?v=040325">
-    <link rel="stylesheet" href="../../styles/common.css?v=040325">
-    <script src="../../scripts/theme.js?=040325"></script>
-    <script src="../../common/categoryNavigator.js?v=040325"></script>
-    <script src="../../common/menuRenderer.js?=040325"></script>
-    <script src="./DevidsMenu.js?v=040325"></script>
+    <title>Tea Canteen</title>
+    <link rel="stylesheet" href="../styles/theme.css?v=040325">
+    <link rel="stylesheet" href="../styles/common.css?v=040325">
+    <script src="../scripts/theme.js?=040325"></script>
+    <script src="../common/categoryNavigator.js?v=040325"></script>
+    <script src="../common/menuRenderer.js?=040325"></script>
+    <script src="./TcMenu.js?v=040325"></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Devid's Canteen</h1>
+            <h1>Tea Canteen</h1>
             <button class="theme-toggle" onclick="ThemeManager.toggle()">
                 <svg class="toggle" fill="none" stroke="currentColor" viewBox="0 0 24 24" id="lightIcon">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
@@ -39,7 +39,7 @@
         </div>
 
         <div id="feedback">
-            <a href="../../feedback" class="feedback-btn">Feedback Form</a>
+            <a href="../feedback" class="feedback-btn">Feedback Form</a>
         </div>
     </div>
 
