--- a/moc/index.html
+++ b/moc/index.html
@@ -34,7 +34,7 @@
         <div class="category-navigator collapsed" id="categoryNavigator">
             <div class="category-nav-list"></div>
             <h4 style="cursor: pointer;" onclick="CategoryNavigator.toggle()">
-                <img src="https://icon-library.com/images/menu-icon/menu-icon-29.jpg" alt="Menu" class="menu-icon" id="menuIcon">
+                <img src="../static/menu.png" alt="Menu" class="menu-icon" id="menuIcon">
             </h4>
         </div>
 
