Add web app manifest and update index.html for PWA support

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="black">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>College Canteens</title>
+    <link href="./menu.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="./styles/theme.css?v=040325">
     <link rel="stylesheet" href="./styles/common.css?v=040325">
+    <link rel="manifest" href="./manifest.json">
     <script src="./scripts/theme.js?v=040325"></script>
     <script src="./scripts/menu.js?v=050325"></script>
 </head>
