Update icon paths in index.html and manifest.json to use static directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <title>College Canteens</title>
-    <link href="./menu.png" rel="icon" type="image/png">
+    <link href="./static/menu.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="./styles/theme.css?v=040325">
     <link rel="stylesheet" href="./styles/common.css?v=040325">
     <link rel="manifest" href="./manifest.json">
