--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <title>College Canteens</title>
     <link href="./static/menu.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="./styles/theme.css?v=040325">
-    <link rel="stylesheet" href="./styles/common.css?v=040325">
+    <link rel="stylesheet" href="./styles/common.css?v=050325">
     <link rel="manifest" href="./manifest.json">
     <script src="./scripts/theme.js?v=040325"></script>
     <script src="./scripts/menu.js?v=050325"></script>
 </head>
 <body>
+    <div class="offline-bar hidden" id="offlinediv">
+        You are offline.
+    </div>
+
     <div class="container">
         <div class="header">
             <h1>College Canteens</h1>
@@ -36,4 +40,15 @@
         </div>
     </div>
 </body>
+<script>
+    async function checkOfflineStatus() {
+        const temp = document.querySelector('#offlinediv');
+        try {
+            await fetch('./offlinetest.api?' + Date.now());
+        } catch (error) {
+            temp.classList.remove('hidden'); // Show the offline message
+        }
+    }
+    checkOfflineStatus();
+</script>
 </html>
