Refactor offline status check to run after DOM content is loaded

--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
     </div>
 </body>
 <script>
-    async function checkOfflineStatus() {
+    document.addEventListener("DOMContentLoaded", () => {
         const temp = document.querySelector('#offlinediv');
-        try {
-            await fetch('./offlinetest.api?' + Date.now());
-        } catch (error) {
-            temp.classList.remove('hidden'); // Show the offline message
-        }
-    }
-    checkOfflineStatus();
+        setTimeout(async () => {
+            try {
+                await fetch('./offlinetest.api?' + Date.now());
+            } catch (error) {
+                temp.classList.remove('hidden');
+            }
+        }, 0);
+    });
 </script>
 </html>
