--- a/moc/index.html
+++ b/moc/index.html
@@ -56,7 +56,7 @@
             const temp = document.querySelector('#offlinediv');
             setTimeout(async () => {
                 try {
-                    await fetch('./offlinetest.api?' + Date.now());
+                    await fetch('../offlinetest.api?' + Date.now());
                 } catch (error) {
                     temp.classList.remove('hidden');
                 }
