Added all menus

--- a/devids/index.html
+++ b/devids/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devid's Canteen</title>
-    <link rel="stylesheet" href="../styles/theme.css?v=040325">
-    <link rel="stylesheet" href="../styles/common.css?v=060325">
+    <link rel="stylesheet" href="../styles/theme.css?v=070425040325">
+    <link rel="stylesheet" href="../styles/common.css?v=070425060325">
     <script src="../scripts/theme.js?=040325"></script>
-    <script src="../common/categoryNavigator.js?v=040325"></script>
+    <script src="../common/categoryNavigator.js?v=070425040325"></script>
     <script src="../common/menuRenderer.js?=040325"></script>
-    <script src="./DevidsMenu.js?v=040325"></script>
+    <script src="./DevidsMenu.js?v=070425040325"></script>
 </head>
 <body>
     <div class="offline-bar hidden" id="offlinediv">
