--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="black">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>College Canteens</title>
+    <title>IIIT Canteens</title>
     <link href="./static/menu.png" rel="icon" type="image/png">
-    <link rel="stylesheet" href="./styles/theme.css?v=040325">
-    <link rel="stylesheet" href="./styles/common.css?v=060325">
+    <link rel="stylesheet" href="./styles/theme.css?v=070425070425">
+    <link rel="stylesheet" href="./styles/common.css?v=070425070425">
     <link rel="manifest" href="./manifest.json">
-    <script src="./scripts/theme.js?v=040325"></script>
-    <script src="./scripts/menu.js?v=050325"></script>
+    <script src="./scripts/theme.js?v=070425070425"></script>
+    <script src="./scripts/menu.js?v=070425070425"></script>
 </head>
 <body>
     <div class="offline-bar hidden" id="offlinediv">
