--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>IIIT Canteens</title>
     <link href="./static/menu.png" rel="icon" type="image/png">
-    <link rel="stylesheet" href="./styles/theme.css?v=070425070425">
-    <link rel="stylesheet" href="./styles/common.css?v=070425070425">
+    <link rel="stylesheet" href="./styles/theme.css?v=070425">
+    <link rel="stylesheet" href="./styles/common.css?v=070425">
     <link rel="manifest" href="./manifest.json">
-    <script src="./scripts/theme.js?v=070425070425"></script>
-    <script src="./scripts/menu.js?v=070425070425"></script>
+    <script src="./scripts/theme.js?v=070425"></script>
+    <script src="./scripts/menu.js?v=070425"></script>
 </head>
 <body>
     <div class="offline-bar hidden" id="offlinediv">
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>College Canteens</h1>
+            <h1>IIIT Canteens</h1>
             <button class="theme-toggle" onclick="ThemeManager.toggle()">
                 <svg class="toggle" fill="none" stroke="currentColor" viewBox="0 0 24 24" id="lightIcon">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
